Adjusted thumbnail rendering + fixed style issues
- Adjusted the css in reviews.less for how thumbnails for text-ish files
  would be rendered: now uses explicit tags instead of the wildcard (*)
  tag
- Resized thumbnail scaling from 60% to 40% based on above change
- Fixed style issues in the code as per Christian's last code review
- Tentatively increased the truncation bound for the raw text-ish files
  from 20 to 200 prior to passing them off to docutil / markdown APIs
  for processing. This is to avoid formatting issues created by
  truncation of the files (e.g. truncating a table before it ends) from
  making their way into the cropped area of the thumbnails
 `

--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -757,7 +757,6 @@
       padding: 0;
       text-align: left;
       white-space: nowrap;
-
     }
 
     .file-thumbnail-clipped {
@@ -769,8 +768,9 @@
       padding: 0;
       text-align: left;
       white-space: nowrap;
-      * {
-        font-size: 60%;
+
+      p, table, pre, code, img, li, h1, h2, h3, h4, h5, h6 {
+        font-size: 40%;
       } 
     }
   }
